--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                     <a href="https://james-sousa.github.io/x-salada/" class="projetos__img">
                         <img src="assets/img/xsalada.jpeg" alt="">
                     </a>
-                    <a href="https://james-sousa.github.io/loja-virtual/" class="projetos__img">
-                        <img src="assets/img/loja.jpeg" alt="">
+                    <a href="https://homewebdj.herokuapp.com/" class="projetos__img">
+                        <img src="assets/img/homeweb.jpeg" alt="">
                     </a>
                     <a href="https://james-sousa.github.io/Nerdflix-/" class="projetos__img">
                         <img src="assets/img/nerdflix.jpeg" alt="">
